# wayne

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  a.py  compare_polynomials.py  dev-install.sh  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: release.yml
examples/: a.py  speak_fiasto_example.py
src/wayne/: __init__.py  trade_formula_for_matrix.py
tests/: __init__.py  conftest.py  test_complex.py  test_speak_fiasto.py
