[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "wayne"
version = "0.1.0"
description = "Trade a formula for a model matrix"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "wayne", email = "wayne@example.com" }]
keywords = [
    "statistics",
    "formula",
    "model-matrix",
    "polars",
    "regression",
    "design-matrix",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["polars>=1.8.2", "numpy>=1.21.0"]

[project.urls]
Homepage = "https://github.com/yourusername/wayne"
Repository = "https://github.com/yourusername/wayne"
Documentation = "https://github.com/yourusername/wayne#readme"
"Bug Tracker" = "https://github.com/yourusername/wayne/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "wayne._wayne"
