[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayne-trade"
version = "0.1.4"
description = "Formula to model matrix converter"
requires-python = ">=3.8"
authors = [{ name = "Alex Hallam", email = "alexhallam628@gmail.com" }]
dependencies = ["polars>=1.8.2", "numpy>=1.21.0", "fiasto-py>=0.1.1"]
license = { text = "MIT" }
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wayne = ["*.py"]
